인증실패 페이지 퍼블리싱:

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="go_back_to_login_page">로그인으로 돌아가기</string>
     <string name="authentication_success">인증성공!</string>
     <string name="success_to_email_authentication">이메일 인증에 성공하였습니다.</string>
+    <string name="authentication_failed">인증실패</string>
+    <string name="try_again">다시 시도해주세요.</string>
 </resources>
