--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="success_to_email_authentication">이메일 인증에 성공하였습니다.</string>
     <string name="authentication_failed">인증실패</string>
     <string name="try_again">다시 시도해주세요.</string>
+    <string name="if_you_forgot_password">비밀번호를 분실하셨다면,\n변경할 수 있어요!</string>
+    <string name="you_can_change">변경할 수 있어요!</string>
 </resources>
