--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="try_again">다시 시도해주세요.</string>
     <string name="if_you_forgot_password">비밀번호를 분실하셨다면,\n변경할 수 있어요!</string>
     <string name="you_can_change">변경할 수 있어요!</string>
+    <string name="input_new_password">새 비밀번호를 입력해주세요!</string>
 </resources>
