--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="try_again">다시 시도해주세요.</string>
     <string name="if_you_forgot_password">비밀번호를 분실하셨다면,\n변경할 수 있어요!</string>
     <string name="you_can_change">변경할 수 있어요!</string>
-    <string name="back">돌아가기</string>
-    <string name="my_page">마이페이지</string>
+    <string name="back">뒤로가기</string>
+    <string name="my_page">MY</string>
     <string name="default_name">채종인</string>
     <string name="logout">로그아웃</string>
     <string name="edit_profile">정보수정</string>
