--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="edit_profile">정보수정</string>
     <string name="liked_post">좋아한 글</string>
     <string name="my_post">작성한 글</string>
+    <string name="divide"> ∙ </string>
 </resources>
