item_major_filter 추가 및 RecyclerView xml 선언

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="idea">아이디어</string>
     <string name="feedback">피드백</string>
     <string name="job_opening">구인</string>
+    <string name="front_end">FrontEnd</string>
+    <string name="back_end">BackEnd</string>
+    <string name="android">Android</string>
 </resources>
