--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="need_password">회원탈퇴를 하려면\n비밀번호가 필요해요</string>
     <string name="incorrect_password">비밀번호가 일치하지 않습니다.</string>
     <string name="new_write">새 글 쓰기</string>
+    <string name="what_category">어떤 글을 쓰시나요?</string>
+    <string name="select_category">카테고리를 골라주세요!</string>
 </resources>
